# Unittest

./: .env.example  LICENSE  conf.py  index.rst  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2a275b383ff5_init.py  7e9926a72f8c_init.py  996f0618c468_init.py  d9af41371398_init.py
docs/source/: conf.py  index.rst
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
tests/repository/: test_contacts.py  test_users.py
tests/routes/: confest.py
