[tool.poetry]
name = "homework-14-web"
version = "0.1.0"
description = ""
authors = ["fls0 <134416720+fls0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
passlib = "^1.7.4"
jwt = "^1.3.1"
python-jose = ">=3.0.0"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
pydantic-settings = "^2.1.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.38.0"
fastapi-limiter = "^0.1.6"
sphinx = "^7.2.6"
unittest2 = "^1.1.0"
pytest = "^7.4.4"
httpx = "^0.26.0"
libgravatar = "^1.0.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
